FIxed Material-icons vertical alignment + added labels to the items

--- a/styles/item.css
+++ b/styles/item.css
@@ -6,8 +6,7 @@
 
 .card {
   background-color: rgb(0, 0, 0, 0.5);
-  border: 2px solid #999;
-  border: 3px solid rgb(221, 211, 76);
+  border: 3px solid rgb(109, 245, 116);
   padding: 2px;
 
   overflow: hidden;
